objects/hed__Term__c.object
<CustomObject><fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>hed__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>hed__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>hed__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Terms</relationshipLabel>
        <relationshipName>Terms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Term_Code__c</fullName>
        <externalId>true</externalId>
        <label>Term Code</label>
        <length>6</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>hed__HEDA_Term_Compact_Layout</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><deprecated>false</deprecated><description>Unit of time in which academic activities are taking place.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Term</label><nameField>
        <label>Term Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Terms</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>hed__All</fullName>
        <columns>NAME</columns>
        <columns>Term_Code__c</columns>
        <columns>Active__c</columns>
        <columns>hed__Start_Date__c</columns>
        <columns>hed__End_Date__c</columns>
        <columns>hed__Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>